# fusionforge

./: .buildpath  .bzrignore  .gitattributes  .gitignore  .project  AUTHORS  Makefile  Makefile.deb  Makefile.debian  Makefile.rh  NEWS  README  build.xml  foo  post-receive-email  specs.watchr
Branch_4_5/: Makefile
Branch_4_6-last_merge/: Makefile.rpm
CVSROOT/: config  cvswrappers  syncmail
autoinstall/: README  build.sh  common-backports  debian-backports-itk2.4.sh  install-gui.sh  install-src.sh  install.sh  libnss-pgsql-openSUSE-Leap-15.2.patch  mini-dinstall-sign.sh  run-testsuite.sh  uninstall.sh  update.sh  vnc-run-testsuite.sh
backend/: DatabaseDump.pl
config/: local.christian  local.g-quadri1  local.g-virtual05  local.vladimir
cronjobs/: README.root  auth_unix.php  calculate_user_metric.php  db_project_sums.php  forum_gateway.php  gather_scm_stats.php  get_news_notapproved.pl  gforge-db-backup.sh  hot-backup.py  job-server.pl  send_pending_items_mail.php  site_stats.php  stats_site.inc  update_filesize.php
db/: 20010112.sql  20010304-1.sql  20010304-4-artifact-convert-files.php  20010305.sql  20010412.sql  20010511.sql  20021124-1_drop_foundry.sql  20030107.sql  20030513.sql  200403251.sql  200403252.sql  20040507.sql  20040722.sql  20040804.sql  20040826_migrateforum.php  20040826_migraterbac.php  20041001.sql  20041031.sql  20041211-syncmail.php  20041222-1-delete-task-artifact.php  20050224-2.sql  20050311.sql  20050325-3.php  20050711.sql  20050804-1.sql  20050804-2.php  20050822-2.sql  20050824.sql  20060214.sql  20100331-alter-system-event.sql  20100402_add_query_options.sql  20100506-add-widgets.sql  20100518-pfo-rbac.sql  20100610-pfo-rbac.sql  20100730-docman.sql  20100926-pfo-rbac.sql  20100927-pfo-rbac.sql  20101012-docman-webdav.sql  20101021-pfo-rbac.sql  20101027-docman-lock.sql  (+19 more)
deb-specific/: create-mailing-lists.pl  cvssh  db-convert-to-unicode.pl  dns.head.template  dns_conf.pl  dsf-helper.pl  exim.directors.template  fileforge.pl  gforge-inject.pl  group_dump_update.pl  init-sequences.sql  install-exim4.sh  install-ftp.sh  install-ldap.sh  install-ssh.sh  mailfwd_update.pl  pkginfo.inc.php  register-plugin  sf-proftpd.conf  sf2.5-to-sf2.6.sql  update-ldap.sh  view_patch.sql
debian/: README.Debian.tmpl  README.source  changelog  control  copyright  cvssh.sgml
docker/: Dockerfile  postinstall.sh  startpoint.sh  supervisord.conf
docs/: README.ConvertToUTF8  README.Plugins  README.Soap  README.TuningLDAP  README.gettext  README.html-utils  debian-guide.html  fusionforge.doxygen  list_of_public_fusionforge
etc/: README  config.ini-fhs  config.ini-usrlocal  httpd.conf-fhs
gforge/: AUTHORS  AUTHORS.gforge  CHANGES  ChangeLog  INSTALL  INSTALL.TXT  INSTALL.dependencies  INSTALL.restricted  NEWS  README  README.Custom  README.Plugins  README.Themes  README.convert_to_utf8  README.setup  SYNCREV  TARBALL  cron.gforge  crontab.in  fusionforge-install-1-deps.php  fusionforge-install-2.php  fusionforge-install-3-db.php  fusionforge.spec  gforge-install-1-deps.php  gforge-install-2-db.php  gforge-install-2.php  gforge-install-3-db.php  gforge-install-3.php  gforge-install-3.sh  gforge-install.sh  gforge-preinstall.php  gforge-restricted.sh  gforge.spec  install-common.inc  install.sh  mkadmin-mysql.sh  pager.php3  setup  user.sh
gforge-plugin-aselectextauth/: ChangeLog
gforge-plugin-cvssyncmail/: INSTALL
gforge-plugin-cvstracker/: AUTHORS  Makefile  README  gforge-plugin-cvstracker.spec  httpd.conf
gforge-plugin-externalsearch/: README  gforge-plugin-externalsearch.spec
gforge-plugin-fckeditor/: ChangeLog  README
gforge-plugin-helloworld/: httpd.conf
gforge-plugin-ldapextauth/: README  gforge-plugin-ldapextauth.spec  login.diff  session.diff
gforge-plugin-scmccase/: README
gforge-plugin-scmcvs/: README  TODO  gforge-plugin-scmcvs.spec
gforge-plugin-scmsvn/: README
htdocs/: index-ajax-0.html  index-ajax-1.html  index-ajax-10.html  index-ajax-2.html  index-ajax-3.html  index-ajax-4.html  index-ajax-5.html  index-ajax-6.html  index-ajax-7.html  index-ajax-8.html  index-ajax-9.html  index.html  index.php  key  main.css  mib.html  mirror
image-sources/: top-logo.xcf
install/: deps  detect_os  install6_upgrade
packaging/: build_component  tag_component_create
plugins/: README
rpm-specific/: Makefile
src/: .dir-locals.el  AUTHORS  AUTHORS.gforge  AUTHORS.sourceforge  CHANGES  COPYING.php  ChangeLog  GNUmakefile  GNUmakefile.defaults  INSTALL.TXT  INSTALL.restricted  Makefile  NEWS  README  VERSION  composer.json  fusionforge-install-1-deps.php  fusionforge-install-2.php  fusionforge-install-3-db.php  fusionforge-install-4-config.php  fusionforge.spec  gforge-restricted.sh  install-common.inc  install-ng  install.sh  setup
tests/: .dir-locals.el  AllFullTests.php  AllTests.php  CDXCentos52Tests.php  DEBDebian60Tests.php  DEBDebian70Tests.php  DEBDebian70TestsSRC.php  README  RPMCentos52Tests.php  RPMCentosTests.php  SeleniumTests.php  TarCentos52Tests.php  TarCentosTests.php  Testsuite-common.php  Testsuite-deb.php  Testsuite-rpm.php  Testsuite-src-cos.php  Testsuite-src-deb.php  Testsuite.php  buildbot-configuration-phpunit.xml  code_and_unit_tests.php  code_and_unit_tests.sh  func_tests-xvnc.sh  func_tests.php  func_tests.sh  ruleset.xml
tools/: check_and_update_forum_role_settings.php  checktab.sh  cmp-schemas.pl  create_class.php  createmissing.sh  createplugin.sh  createtheme.sh  dbconnect.sh  dead_column_cleaner.rb  delete_deleted_group.sql  delete_deleted_user.sql  desc.sh  export-tracker.tcl  find_user_group_double.sql  gettext-stats.sh  jpgraph_pietest.php  language_file_merger.php  make-mo.sh  make-theme-orig.sh  make-theme-starterpack.sh  mcrypt-test.sh  mcrypt-test2.sh  mcrypt-test3.sh  mirror-gforge.sh  patchmaker.php  pluglist  replicate_gforge.sh  reset_projectfiles.sh  restoretrove.sql  rpmdev-setuptree  savannah_convert.sh  session.php  simulate_cron.pl  tab2gettext.pl  (+3 more)
trunk/component/gforge/source/contrib/autoconf/: README.configure  configure  configure.ac  local.inc.in  sample-apache.vhost.in
(+15121 files in other folders)
